--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
 </head>
 
 <body>
-   <div class="container">
-    <div class="col-l"></div>
-    <div class="col-r">
-        <form action="#">
-            <h1>Create an account</h1>
-            <p>Already have an acount?<a class="login" href="#">Log in</a></p>
-            <div class="input">
-                <label for="user">User name</label>
-                <input type="text" id="user" name="user">
-                <label for="email">Email address</label>
-                <input type="email" id="email" name="email">
-                <label for="pwd">Password <span><img class="hide" src="./image/icon.svg">Hide</span></label>
-                <input type="password" id="pwd" name="pwd">
-                <p class="desc">Use 8 or more characters with a mix of letters, numbers & symbols</p>
-            </div>
-            <p>By creating an account, you agree to our <a href="#">Terms of use</a>and<a href="#">Privacy Policy</a>
-            </p>
-            <div class="check">
-                <input type="checkbox" id="checkbox" name="checkbox">
-                <label for="checkbox">I&apos;m not a robot</label>
-                <img class="logo" src="./image/google_recaptcha-official 2.svg">
+    <div class="container">
+        <div class="col-l"></div>
+        <div class="col-r">
+            <form action="#">
+                <h1>Create an account</h1>
+                <p>Already have an acount?<a class="login" href="#">Log in</a></p>
+                <div class="input">
+                    <label for="user">User name</label>
+                    <input type="text" id="user" name="user">
+                    <label for="email">Email address</label>
+                    <input type="email" id="email" name="email">
+                    <label for="pwd">Password <span><img class="hide" src="./image/icon.svg">Hide</span></label>
+                    <input type="password" id="pwd" name="pwd">
+                    <p class="desc">Use 8 or more characters with a mix of letters, numbers & symbols</p>
+                </div>
+                <p>By creating an account, you agree to our <a href="#">Terms of use</a>and<a href="#">Privacy
+                        Policy</a>
+                </p>
+                <div class="check">
+                    <input type="checkbox" id="checkbox" name="checkbox" checked>
+                    <label for="checkbox">I&apos;m not a robot</label>
+                    <img class="logo" src="./image/google_recaptcha-official 2.svg">
 
-            </div>
-            <div class=sub style="text-align: center;"><input type="submit" value="Create an accrount"></div>
-            <p>Already have an acount?<a class="login" href="#">Log in</a></p>
+                </div>
+                <div class=sub style="text-align: center;"><input type="submit" value="Create an accrount"></div>
+                <p>Already have an acount?<a class="login" href="#">Log in</a></p>
 
 
-        </form>
+            </form>
+        </div>
     </div>
-   </div>
-   
+
 
 </body>
 
